...
  <string name="Modal_InterruptTest_Paragraph">This will interrupt the current test from this moment.</string>
  <string name="Modal_Autorun_Modal_Title">Would you like to run tests automatically?</string>
  <string name="Modal_Autorun_Modal_Text">By enabling automated testing, you will contribute OONI measurements on a regular basis.</string>
  <string name="Modal_Autorun_Modal_Text_Android">Please allow the app to run in the background.</string>
  <string name="Modal_Autorun_Modal_Button_RemindLater">Remind me later</string>
  <string name="Toast_CopiedToClipboard">Copied to clipboard</string>
  <string name="Snackbar_ResultsNotUploaded_Text">Not uploaded</string>
  <string name="Snackbar_ResultsNotUploaded_Upload">Upload</string>
  <string name="Snackbar_ResultsSomeNotUploaded_Text">Some not uploaded</string>
  <string name="Snackbar_ResultsSomeNotUploaded_UploadAll">Upload All</string>
  <string name="Test_Websites_Fullname">News Media Websites</string>
  <string name="Test_InstantMessaging_Fullname">Instant Messaging</string>
  <string name="Test_Middleboxes_Fullname">Middleboxes</string>
...
  <string name="Settings_AutomatedTesting_RunAutomatically_Number">Number of automated tests: %1$s.</string>
  <string name="Settings_AutomatedTesting_RunAutomatically_DateLast">Last automated test: %1$s.</string>
  <string name="Settings_AutomatedTesting_RunAutomatically_WiFiOnly">Only on WiFi</string>
  <string name="Settings_AutomatedTesting_RunAutomatically_ChargingOnly">Only while charging</string>
  <string name="Settings_AutomatedTesting_RunAutomatically_Footer">By enabling automatic testing, OONI Probe tests will run automatically multiple times per day. Your test results will automatically get published on OONI Explorer: https://explorer.ooni.org/ \n\nImportant: If you have a VPN enabled, OONI Probe will not run tests automatically. Please turn off your VPN for automated OONI Probe testi
  <string name="Settings_Sharing_Label">Sharing</string>
  <string name="Settings_Sharing_UploadResults">Automatically Publish Results</string>
  <string name="Settings_Sharing_UploadResultsManually">Manual Result Upload</string>
  <string name="Settings_Sharing_IncludeNetwork">Include Network Info</string>
  <string name="Settings_Sharing_GPS">Include approximate geo-location</string>
  <string name="Settings_Sharing_IncludeIP">Include my IP address</string>
  <string name="Settings_Sharing_IncludeCountryCode">Include Country Code</string>
  <string name="Settings_Sharing_IncludeCountryCode_PopUp">This information (e.g. IT for Italy) is required to identify which country the measurements are collected from. Are you sure you want to disable this option?</string>
  <string name="Settings_Sharing_Footer">By publishing results, you are increasing transparency of network interference and supporting the OONI community. \n\nNetwork information (i.e. Autonomous System Number) is required for identifying Internet Service Providers.</string>
  <string name="Settings_TestOptions_Label">Test options</string>
  <string name="Settings_TestOptions_Footer">What you configure through the above test settings (e.g. disabling the WhatsApp test) will apply to tests run manually, as well as to tests run automatically (when automated testing is enabled).</string>
  <string name="Settings_TestOptions_LongRunningTest">Long running test</string>
  <string name="Settings_TestOptions_RunLongRunningTests">Run long running tests in foreground?</string>
  <string name="Settings_Privacy_Label">Privacy</string>
  <string name="Settings_Privacy_SendCrashReports">Send crash reports</string>
  <string name="Settings_Advanced_Label">Advanced</string>
  <string name="Settings_DarkMode_Label">Dark Mode</string>
  <string name="Settings_Advanced_DebugLogs">Debug logs</string>
  <string name="Settings_Advanced_RecentLogs">See recent logs</string>
  <string name="Settings_Advanced_LanguageSettings_Title">Language Setting</string>
...
